# pyCEStoriesEditor

./: .flake8rc  .gitignore  .xsdata.xml  HOWTO.make_release.txt  README.md  genfromxsd.sh  pyproject.toml  setup.py
.github/workflows/: build.yml
src/pycestorieseditor/: __init__.py  __main__.py  ancestrygraph.py  ceevents.py  config.py  graph.py  pil2wx.py  ui.py  wxlaunch.py  wxui.py
src/pycestorieseditor/ceevents_template/: __init__.py  ceevents_modal.py
src/pycestorieseditor/icons/: legend_green.xcf
