[project]
name = "pyCeStoriesEditor"
version = "0.1"
description = "Small stories visualizer for the Bannerlord mod Captivity Events."

[tool.distutils.build_exe]
excludes = [
  "tkinter", "gi", "gtk", "PyQt4", "PyQt5", "PyQt6",
  "PySide2", "PySide6", "shiboken2", "shiboken6", "lib2to3"
]
packages = ["xsdata_attrs.hooks"]

[tool.poetry]
name = "pycestorieseditor"
version = "0.1.0"
description = ""
authors = ["bicobus <bicobus@keemail.me>"]
readme = "README.md"
packages = [{include = "pycestorieseditor", from = "src"}]

[tool.poetry.scripts]
pycestorieseditor = 'pycestorieseditor.__main__:main'

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
graphviz = "^0.20.1"
xmlschema = "^2.2"
attrs = "^23.1"
xsdata-attrs = {extras = ["cli"], version = "^23.8"}
lxml = "^4.9"
pygments = "^2.15"
wxpython = "^4.2"
pillow = "^9.5"
platformdirs = "^3.10.0"


[tool.poetry.group.dev.dependencies]
setuptools = "*"
wheel = "*"
pip = "*"
cx-freeze = "^6.15.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 98
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)
'''

[tool.isort]
multi_line_output = 3
line_length = 98
include_trailing_comma = true
skip_glob = "tests/**,docs/**"
skip_gitignore = false
use_parentheses = true

[tool.pylint."messages control"]
max-line-length = 98

# Only show warnings with the listed confidence levels. Leave empty to show all.
# Valid levels: HIGH, CONTROL_FLOW, INFERENCE, INFERENCE_FAILURE, UNDEFINED.
confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFINED"]

# Disable the message, report, category or checker with the given id(s). You can
# either give multiple identifiers separated by comma (,) or put this option
# multiple times (only on the command line, not in the configuration file where
# it should appear only once). You can also use "--disable=all" to disable
# everything first and then re-enable specific checks. For example, if you want
# to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".

disable = [
"raw-checker-failed", "bad-inline-option", "locally-disabled",
"file-ignored", "suppressed-message", "useless-suppression",
"deprecated-pragma", "use-symbolic-message-instead", "too-few-public-methods",
"missing-docstring", "consider-using-f-string", "too-many-ancestors",
"too-many-instance-attributes"
]

# Enable the message, report, category or checker with the given id(s). You can
# either give multiple identifier separated by comma (,) or put this option
# multiple time (only on the command line, not in the configuration file where it
# should appear only once). See also the "--disable" option for examples.
enable = ["c-extension-no-member"]

[tool.pylint.miscellaneous]
# List of note tags to take in consideration, separated by a comma.
notes = ["FIXME", "XXX", "TODO", "NOTE"]

# Regular expression of note tags to take in consideration.
# notes-rgx =

[tool.pylint.similarities]
# Comments are removed from the similarity computation
ignore-comments = true

# Docstrings are removed from the similarity computation
ignore-docstrings = true

# Imports are removed from the similarity computation
ignore-imports = true

# Signatures are removed from the similarity computation
ignore-signatures = true

# Minimum lines number of a similarity.
min-similarity-lines = 4
